--- a/src/sassStyles/layouts/_page-layout.scss
+++ b/src/sassStyles/layouts/_page-layout.scss
@@ -110,7 +110,8 @@
     justify-content: center;
 
     p {
-      padding: 0 5%;
+      //EDIT % or px?
+      // padding: 0 50px;
     }
   }
 
